# darkmux

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DISCLAIMER.md  README.md  ROADMAP.md  SECURITY.md  config.example.json  profiles.example.json
.github/: DARKMUX_REVIEW_RUNNER.md  (+1 more)
crates/darkmux-agent-roles/: Cargo.toml
crates/darkmux-agent-roles/src/: lib.rs
crates/darkmux-bundler-rust/: Cargo.toml
crates/darkmux-bundler-rust/src/: bundler.rs  facts.rs  main.rs  scan.rs
crates/darkmux-bundler-rust/tests/: contract.rs
crates/darkmux-crew/: Cargo.toml
crates/darkmux-crew/src/: cli.rs  concurrent_dispatch.rs  corrections.rs  corrections_tests.rs  dispatch.rs  dispatch_as_crew_of_one.rs  dispatch_internal.rs  dispatch_internal_tests.rs  envelope.rs  index.rs  knowledge.rs  lessons.rs  lib.rs  lifecycle.rs  loader.rs  loader_load_per_mission_tests.rs  loader_tests.rs  pins.rs  resourcing.rs  scheduler.rs  select.rs  single_shot.rs  telemetry_sampler.rs  types.rs
crates/darkmux-crew/src/mission_config/: interpret.rs  load.rs  mod.rs
crates/darkmux-crew/src/step_kinds/: builtins.rs  mod.rs  registry.rs  types.rs
crates/darkmux-crew/src/step_kinds/patterns/: dedup.rs  mod.rs  multi_pass_confirm.rs
crates/darkmux-crew/tests/: mock_dispatch_proof.rs
crates/darkmux-doctor/: Cargo.toml
crates/darkmux-doctor/src/: lib.rs
crates/darkmux-eureka/: Cargo.toml
crates/darkmux-eureka/src/: lib.rs
crates/darkmux-fleet/: Cargo.toml
crates/darkmux-fleet/src/: lib.rs  queue.rs  roster.rs  routing.rs  runner.rs  worker.rs
crates/darkmux-flow/: Cargo.toml
crates/darkmux-flow/src/: bookend.rs  daemon_probe.rs  integrity.rs  lib.rs  presence.rs  presence_reconciler.rs  schema.rs  session_presence.rs  status.rs
crates/darkmux-gestalt/: Cargo.toml
crates/darkmux-gestalt/src/: desired.rs  estimator.rs  facts.rs  lib.rs  mock.rs  ownership.rs  plan.rs  planner.rs  ports.rs  residency.rs  waves.rs
crates/darkmux-gestalt/tests/: mock_full_plan_proof.rs
crates/darkmux-hardware/: Cargo.toml
crates/darkmux-hardware/src/: lib.rs
crates/darkmux-heuristics/: Cargo.toml
crates/darkmux-heuristics/src/: generic.rs  lib.rs  m_series_128.rs  m_series_32.rs  m_series_64.rs
crates/darkmux-lab/: Cargo.toml
crates/darkmux-lab/examples/: dump_bundles.rs
crates/darkmux-lab/src/: lib.rs
crates/darkmux-lab/src/lab/: artifact_dirs.rs  characterize.rs  compare.rs  cow_clone.rs  dialectic.rs  doctor.rs  fixture.rs  fixture_cli.rs  funnel.rs  inspect.rs  instrument.rs  list.rs  loop_report.rs  mod.rs  profile_check.rs  registry.rs  review.rs  review_bench.rs  review_bench_tests.rs  review_tests.rs  run.rs  sandbox_hash.rs  scores.rs  tune.rs
crates/darkmux-lab/src/lab/bundle/: diff.rs  external.rs  facts.rs  mod.rs  scan.rs  source.rs
crates/darkmux-lab/src/providers/: coding_task.rs  mod.rs  prompt.rs  tool_bench.rs  workspace_delta.rs
crates/darkmux-lab/src/workloads/: load.rs  mod.rs  registry.rs  types.rs
crates/darkmux-lab/tests/: bundle_golden.rs
crates/darkmux-lab/tests/fixtures/bundle/: diff.patch  golden.json
crates/darkmux-lab/tests/fixtures/bundle/worktree/src/orders/: order.ts  pricing.ts
crates/darkmux-lab/tests/fixtures/bundle/worktree/src/orders/legacy/: placeOrder.ts
crates/darkmux-lab/tests/golden/: review_graph_3seat.json
crates/darkmux-profiles/: Cargo.toml
crates/darkmux-profiles/src/: crews.rs  envelope.rs  lib.rs  lms.rs  model_ledger.rs  profiles.rs  runtime.rs  swap.rs
crates/darkmux-profiles/src/gestalt_host/: arch_facts.rs  lms_host.rs  mac_probe.rs  mod.rs
crates/darkmux-profiles/tests/fixtures/lmstudio-models/mlx-community/Fake-Devstral-Small-2-2512-4bit/: config.json
crates/darkmux-profiles/tests/fixtures/lmstudio-models/phi-pub/phi-4/: config.json
crates/darkmux-profiles/tests/fixtures/lmstudio-models/phi-pub/phi-4-mini/: config.json
crates/darkmux-profiles/tests/fixtures/lmstudio-models/test-pub/hybrid-35b/: config.json
crates/darkmux-profiles/tests/fixtures/lmstudio-models/test-pub/missing-fields/: config.json
crates/darkmux-profiles/tests/fixtures/lmstudio-models/test-pub/plain-4b/: config.json
crates/darkmux-profiles/tests/fixtures/lmstudio-models/ver-pub/Foo-Model-2505/: config.json
crates/darkmux-recommendations/: Cargo.toml
crates/darkmux-recommendations/src/: lib.rs
crates/darkmux-serve/: Cargo.toml
crates/darkmux-serve/assets/: manifest.webmanifest  mission-graph.html  viewer.html
crates/darkmux-serve/src/: aliases.rs  lib.rs  lib_tests.rs  mission_graph.rs  runs.rs
crates/darkmux-types/: Cargo.toml  build.rs
crates/darkmux-types/src/: config.rs  config_access.rs  dispatch_liveness.rs  flock.rs  lib.rs  paths.rs  residency_lease.rs  session_id.rs  size.rs  style.rs  workdir.rs
plugins/darkmux-bundler-rust/: Cargo.toml
plugins/darkmux-bundler-rust/src/: bundler.rs  contract.rs  diff.rs  main.rs  scan.rs
plugins/darkmux-bundler-rust/tests/: contract.rs
runtime/: .gitignore  Cargo.toml  Dockerfile  README.md  build-images.sh
runtime/src/: compaction.rs  cycle_detector.rs  failure_rate.rs  feedback.rs  json_repair.rs  lmstudio.rs  loop_runner.rs  main.rs  plain_text_tool_calls.rs  reasoning_loop.rs  tool_result_prune.rs  trajectory.rs
runtime/src/tools/: mod.rs  workspace.rs
runtime/tests/fixtures/: README.md  compactor_response_format_v0.json  compactor_system_v0.txt  compactor_system_with_custom_v0.txt  compactor_user_message_v0.txt
runtime/tests/fixtures/compactor-malformed/: beat47-runaway-newlines-active-files.json  beat48-truncated-missing-objective.json
runtime/tests/fixtures/cycle-traces/: beat48-run1-read-edit-bash-test-iteration.jsonl
runtime/tests/fixtures/promoter-emissions/: beat48-run5-orphan-xml-close-tags.txt
spike/agent-runtime/: .dockerignore  Cargo.toml  Dockerfile  README.md
spike/agent-runtime/src/: compaction.rs  lmstudio.rs  loop_runner.rs  main.rs  trajectory.rs
spike/agent-runtime/src/tools/: mod.rs  workspace.rs
tools/darkmux-mock-model/: Cargo.toml
tools/darkmux-mock-model/src/: main.rs
(+924 files in other folders)
