[package]
name = "darkmux"
version = "0.4.0"
edition = "2021"
description = "Lab and multiplexer for local LLM configurations"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[[bin]]
name = "darkmux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# Phase B (#45) — SQLite-backed derived index over crew manifests.
# `bundled` per #45 dep spec so users don't need libsqlite3 on PATH.
rusqlite = { version = "0.31", features = ["bundled"] }

# #162 Phase 3 — Redis client for the live-coordination flow sink.
# Opt-in at runtime via DARKMUX_REDIS_URL env var; default deployments
# don't connect to Redis even though the dep is linked. The "streams"
# feature is what we use (XADD, XREAD). default-features = false skips
# the bigger dep surface (async runtimes etc.) we don't need.
redis = { version = "0.27", default-features = false, features = ["streams"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
tower = "0.5"
predicates = "3.1"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
