[workspace]
members = [".", "crates/darkmux-types", "crates/darkmux-flow", "crates/darkmux-profiles", "crates/darkmux-crew", "crates/darkmux-hardware", "crates/darkmux-agent-roles", "crates/darkmux-heuristics", "crates/darkmux-eureka", "crates/darkmux-fleet", "crates/darkmux-recommendations", "crates/darkmux-lab", "crates/darkmux-doctor", "crates/darkmux-serve"]
# runtime/ is a separate crate with its own Cargo.lock; it stays out of the
# workspace per #463 ("stays as-is").
exclude = ["runtime"]

[package]
name = "darkmux"
version = "1.13.1"
edition = "2021"
description = "Lab and multiplexer for local LLM configurations"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[[bin]]
name = "darkmux"
path = "src/main.rs"

[dependencies]
# #463 workspace split — foundation crates extracted from this binary.
darkmux-types = { path = "crates/darkmux-types" }
darkmux-flow = { path = "crates/darkmux-flow" }
darkmux-profiles = { path = "crates/darkmux-profiles" }
darkmux-crew = { path = "crates/darkmux-crew" }
darkmux-hardware = { path = "crates/darkmux-hardware" }
darkmux-heuristics = { path = "crates/darkmux-heuristics" }
darkmux-eureka = { path = "crates/darkmux-eureka" }
darkmux-fleet = { path = "crates/darkmux-fleet" }
darkmux-recommendations = { path = "crates/darkmux-recommendations" }
darkmux-lab = { path = "crates/darkmux-lab" }
darkmux-doctor = { path = "crates/darkmux-doctor" }
darkmux-serve = { path = "crates/darkmux-serve" }
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# Phase B (#45) — SQLite-backed derived index over crew manifests.
# `bundled` per #45 dep spec so users don't need libsqlite3 on PATH.
rusqlite = { version = "0.31", features = ["bundled"] }

# #162 Phase 3 — Redis client for the live-coordination flow sink.
# Opt-in at runtime via DARKMUX_REDIS_URL env var; default deployments
# don't connect to Redis even though the dep is linked. The "streams"
# feature is what we use (XADD, XREAD). default-features = false skips
# the bigger dep surface (async runtimes etc.) we don't need.
redis = { version = "0.27", default-features = false, features = ["streams"] }

# #163 — AuditFileSink: hash-chained tamper-evident sink.
# BLAKE3: fast cryptographic hash for the per-record chain. Audited
# reference impl; ~120 lines of public API. Used here for content
# hashing — the chain check is a linear walk recomputing each hash
# and comparing against the stored value.
blake3 = "1.5"
# libc: flock(2) for cross-process locking on the per-day audit file.
# Already a transitive dep (via tokio); declared explicitly here so
# the unsafe blocks in src/flow.rs read against a known direct interface.
libc = "0.2"

# #275 PR-B — synchronous HTTP client for `darkmux fleet status --deep`
# (and any future CLI verb that fetches another daemon's REST surface).
# Chosen as the smallest viable client: no async runtime at use-site,
# no tokio dep, no hyper-style transitive stack. Default features cover
# what we need (HTTP/1.1 GET, timeouts; response body read as Vec<u8>
# and parsed by serde_json). `default-features = false` keeps the
# dep-set discipline this project values.
ureq = { version = "2.10", default-features = false }

[dev-dependencies]
# #463 — enable flow's test-only helpers (isolate_test_env_once) for the
# binary's test build. Feature-unification turns this on only for tests/
# examples/benches, not for a plain `cargo build` of the release binary.
darkmux-flow = { path = "crates/darkmux-flow", features = ["test-support"] }
tempfile = "3.10"
assert_cmd = "2.0"
tower = "0.5"
predicates = "3.1"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
