# Empty [workspace] table makes this crate its own workspace root, fully
# independent of the parent darkmux workspace. The parent's `exclude =
# ["runtime"]` keeps runtime out of `cargo build` at the repo root, but that
# alone does NOT make `cd runtime && cargo build` (the Docker image build)
# work once the parent gained a [workspace] table in the #463 split — cargo
# walks up, finds the parent workspace, and errors. This declares runtime
# standalone so the container build resolves against runtime/Cargo.lock. (#463 follow-up)
[workspace]

[package]
name = "darkmux-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Container-bounded in-house agent runtime for darkmux — see README.md"
publish = false

[[bin]]
name = "darkmux-runtime"
path = "src/main.rs"

[dependencies]
# Error handling — matches the main darkmux crate convention.
anyhow = "1"

# OpenAI chat-completions request/response shapes.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# (#1001) Firing-time content hash for detector cautions (staleness
# detection). BLAKE3 — not std `DefaultHasher` — because the hash is
# PERSISTED in the cautions index and compared at a later dispatch, possibly
# across darkmux/Rust versions, so it must be stable forever. Already a
# workspace dependency (darkmux-lab / darkmux-flow), so no new license surface.
blake3 = "1.5"

# HTTP client. ureq is blocking + tokio-free → smaller binary + simpler
# call sites. The agent loop is inherently sequential per dispatch, so
# async buys us nothing here.
#
# rustls-tls keeps the build alpine-friendly (no native openssl link).
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
# Workspace-root path validation tests need real filesystem with
# tempfile: maintained successor to the deprecated `tempdir` crate
# (RUSTSEC-2018-0017) — its remove_dir_all impl also avoids RUSTSEC-2023-0018.
tempfile = "3"

# In-process HTTP mock server. Used by the compaction-loop integration
# test to stand in for LMStudio without needing a real model loaded —
# deterministic verification that the runtime's compaction code path
# actually invokes the compactor model when the threshold trips, vs
# just verifying the threshold predicate in isolation.
httpmock = "0.7"

# Serialized test execution for tests that mutate process env vars
# (compaction threshold, compactor model id). Matches the main crate's
# convention; same crate version is used there.
serial_test = "3"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
