[package]
name = "darkmux-agent-roles"
version = "1.6.0"
edition = "2021"
description = "darkmux agent-role definitions (legacy team-role surface)"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
