[package]
name = "darkmux-crew"
version = "2.1.0"
edition = "2021"
description = "darkmux crew — Role/Crew/Mission/Phase schema, loaders, dispatch, and the SQLite-derived index"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
darkmux-flow = { path = "../darkmux-flow" }
darkmux-profiles = { path = "../darkmux-profiles" }
# (#1230 Packet 1) The bounded concurrent-dispatch executor
# (concurrent_dispatch.rs) calls gestalt's pure `plan_waves` once up front to
# partition local jobs into co-resident-safe waves before executing them.
darkmux-gestalt = { path = "../darkmux-gestalt" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# Phase B (#45) — SQLite-backed derived index over crew manifests.
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) Empty the config tier by construction in crew's TEST build so the
# inactivity-timeout default-assertion tests assert the built-in 600, not the
# operator's real runtime.inactivity_timeout_seconds. Dev-dep only; off in the
# release binary.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
