[package]
name = "darkmux-doctor"
version = "1.8.0"
edition = "2021"
description = "darkmux doctor — environment + harness self-checks (the eureka roll-up surface)"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
darkmux-flow = { path = "../darkmux-flow" }
darkmux-profiles = { path = "../darkmux-profiles" }
darkmux-crew = { path = "../darkmux-crew" }
darkmux-eureka = { path = "../darkmux-eureka" }
darkmux-hardware = { path = "../darkmux-hardware" }
darkmux-heuristics = { path = "../darkmux-heuristics" }
darkmux-recommendations = { path = "../darkmux-recommendations" }
darkmux-agent-roles = { path = "../darkmux-agent-roles" }
anyhow = "1.0"
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) Empty the config tier by construction in this crate's TEST build so
# tests never read the operator's real ~/.darkmux/config.json (e.g. doctor's
# redis-enabled / check-updates gates). Dev-dep only; off in the release binary.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
