[package]
name = "darkmux-fleet"
version = "1.3.3"
edition = "2021"
description = "darkmux fleet — roster/topology, Redis work queue, runner loop, and dispatch routing"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
darkmux-flow = { path = "../darkmux-flow" }
darkmux-crew = { path = "../darkmux-crew" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# libc: flock(2) for the roster/queue file locking.
libc = "0.2"
# Redis work queue (XADD/XREAD): the cross-machine dispatch substrate.
redis = { version = "0.27", default-features = false, features = ["streams"] }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) Empty the config tier by construction in this crate's TEST build so
# tests never read the operator's real ~/.darkmux/config.json (e.g. fleet_file /
# redis_stream resolution). Dev-dep only; off in the release binary.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
