[package]
name = "darkmux-flow"
version = "1.4.0"
edition = "2021"
description = "darkmux flow observability — structured JSONL records + sinks (LocalFile/Audit/Redis)"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[features]
# Exposes test-only helpers (e.g. `isolate_test_env_once`) to downstream
# crates' test builds without compiling them into release binaries. Enabled
# from the binary's dev-dependency on this crate. See #463.
# (#811) Pulls in darkmux-types' test-support so the config tier is empty by
# construction in flow's (and the binary's) test build — propagated to the
# binary's test build via its dev-dep on this crate's test-support feature.
test-support = ["darkmux-types/test-support"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# #163 — AuditFileSink: BLAKE3 hash-chained audit sink (edits detected by `flow integrity-check`).
blake3 = "1.5"
# libc: flock(2) for cross-process locking on the per-day audit file.
libc = "0.2"
# #162 Phase 3 — Redis client for the live-coordination flow sink.
redis = { version = "0.27", default-features = false, features = ["streams"] }
# #640 — stable machine identity (IOPlatformUUID) for presence beats.
darkmux-hardware = { path = "../darkmux-hardware" }
# #661 — config accessors (env > config.json > default). The one new edge in
# the dep graph; darkmux-types is the leaf (no darkmux-* deps), so no cycle.
darkmux-types = { path = "../darkmux-types" }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) flow's OWN tests need darkmux-types' test-support (the `test` cfg on
# darkmux-types doesn't apply when it's a dep) so the config tier is empty by
# construction. Feature-unifies with the normal dep above in the test build only.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
