[package]
name = "darkmux-gestalt"
version = "1.18.0"
edition = "2021"
description = "darkmux gestalt — pure model-lifecycle planning core (facts in, plans out) + host ports"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
serde = { version = "1.0", features = ["derive"] }
# Only for LoadReport.extras — the lenient host-reported load-config overflow
# (#1257). The planning core itself never touches serde_json.
serde_json = "1.0"

[dev-dependencies]
# (#811) Empty the config tier by construction in this crate's TEST build.
# The gestalt core reads no config at all (pure by contract), so this is
# belt-and-suspenders workspace convention, not a functional need.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
