[package]
name = "darkmux-hardware"
version = "1.8.0"
edition = "2021"
description = "darkmux hardware detection — RAM/chip tier introspection"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
