[package]
name = "darkmux-heuristics"
version = "1.3.3"
edition = "2021"
description = "darkmux per-tier heuristic profiles (M-series + generic)"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-hardware = { path = "../darkmux-hardware" }
darkmux-profiles = { path = "../darkmux-profiles" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
