[package]
name = "darkmux-lab"
version = "1.17.0"
edition = "2021"
description = "darkmux lab — workload harness, manifest/provider registry, built-in providers"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
darkmux-crew = { path = "../darkmux-crew" }
darkmux-eureka = { path = "../darkmux-eureka" }
# (#1198) machine fingerprint for the scores.json fit key + RFC3339 ts.
darkmux-flow = { path = "../darkmux-flow" }
darkmux-hardware = { path = "../darkmux-hardware" }
darkmux-profiles = { path = "../darkmux-profiles" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# BLAKE3 — content hashing for sandbox baseline/final hashes (#487).
blake3 = "1.5"
# libc: flock(2) for the cross-process registry read-modify-write lock
# (#496), mirroring darkmux-flow's AuditFileSink pattern.
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) Empty the config tier by construction in this crate's TEST build so
# tests never read the operator's real ~/.darkmux/config.json (e.g. default_role
# / runtime-agents-dir / templates-dir resolution). Dev-dep only; off in release.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
