[package]
name = "darkmux-lab"
version = "1.18.5"
edition = "2021"
description = "darkmux lab — workload harness, manifest/provider registry, built-in providers"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
darkmux-crew = { path = "../darkmux-crew" }
darkmux-eureka = { path = "../darkmux-eureka" }
# (#1198) machine fingerprint for the scores.json fit key + RFC3339 ts.
darkmux-flow = { path = "../darkmux-flow" }
darkmux-hardware = { path = "../darkmux-hardware" }
darkmux-profiles = { path = "../darkmux-profiles" }
# (#1230 Packet 1) The review pipeline's model-cycling now routes through gestalt's
# pure planner (plan_acquire/plan_release) instead of a private
# decide_residency/resolve_auto — see lab/review.rs's LmsCycler.
darkmux-gestalt = { path = "../darkmux-gestalt" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# BLAKE3 — content hashing for sandbox baseline/final hashes (#487).
blake3 = "1.5"
# libc: flock(2) for the cross-process registry read-modify-write lock
# (#496), mirroring darkmux-flow's AuditFileSink pattern.
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) Empty the config tier by construction in this crate's TEST build so
# tests never read the operator's real ~/.darkmux/config.json (e.g. default_role
# / runtime-agents-dir / templates-dir resolution). Dev-dep only; off in release.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
# (#1355 review round) Route this crate's test build's process-global
# `darkmux_flow::record()` writes into a per-process temp dir instead of the
# operator's real ~/.darkmux/flows (and scrub DARKMUX_REDIS_URL before the
# default sink freezes) — the review graph tests dispatch through the global
# sink and were leaking ~302 mock records per `cargo test -p darkmux-lab` run
# into the live fleet dashboard's day file. See darkmux-flow's
# `local_sink_dir()`. Dev-dep only — cargo does not unify dev-dep features
# into normal-dependency builds, so release builds stay off (verified via
# `cargo tree -e features` in the #1355 review round).
darkmux-flow = { path = "../darkmux-flow", features = ["test-support"] }
