[package]
name = "darkmux-profiles"
version = "1.18.5"
edition = "2021"
description = "darkmux profile registry + LMStudio stack-swap orchestration"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
# (#1274 packet 2b) The gestalt port traits + fact types the `gestalt_host`
# adapters implement. No cycle: darkmux-gestalt depends only on darkmux-types.
darkmux-gestalt = { path = "../darkmux-gestalt" }
anyhow = "1.0"
# (#1286) Serialize derives for the memory-ledger payload (ONE struct feeds
# both `darkmux model ledger --json` and the serve daemon's /machine/memory).
# Already throughout the workspace dependency tree — not a new external dep.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
# (#811) Empty the config tier by construction in this crate's TEST build so
# tests never read the operator's real ~/.darkmux/config.json (e.g. lms_bin
# resolution). Dev-dep only; off in the release binary.
darkmux-types = { path = "../darkmux-types", features = ["test-support"] }
