[package]
name = "darkmux-recommendations"
version = "1.3.3"
edition = "2021"
description = "darkmux tier-aware recommendation registry (per-hardware-tier model picks)"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
darkmux-types = { path = "../darkmux-types" }
darkmux-hardware = { path = "../darkmux-hardware" }
darkmux-heuristics = { path = "../darkmux-heuristics" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
