[package]
name = "darkmux-types"
version = "1.1.0"
edition = "2021"
description = "darkmux foundation crate — Profile schema + workspace-path resolver"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
