[package]
name = "darkmux-types"
version = "1.1.0"
edition = "2021"
description = "darkmux foundation crate — Profile schema + workspace-path resolver"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[features]
# (#811) Exposes `config_access::force_empty_config_for_test()` to dependent
# crates' TEST builds so a test can neutralize the config tier (never read the
# operator's real ~/.darkmux/config.json). Off in normal builds.
test-support = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
