[package]
name = "darkmux-types"
version = "1.6.0"
edition = "2021"
description = "darkmux foundation crate — Profile schema + workspace-path resolver"
license = "MIT"
homepage = "https://darkmux.com"
repository = "https://github.com/kstrat2001/darkmux"
authors = ["Kain Osterholt"]
rust-version = "1.80"

[features]
# (#811) Clean-by-construction test isolation. When enabled (only ever via a
# dependent crate's DEV-dependency), `config_access::config()` returns an EMPTY
# config — a test build never reads the operator's real ~/.darkmux/config.json
# (which silently flaked default-assertion tests and leaked test records to the
# real Redis stream). No per-test call; a crate opts its whole test build in.
# Off in normal/release builds, so the production config path is unchanged.
test-support = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
